--- a/canvas_api/style.css
+++ b/canvas_api/style.css
@@ -2,3 +2,19 @@
   /* background-color: aqua; */
   border: 1px solid black;
 }
+#myCanvas2 {
+  /* background-color: aqua; */
+  border: 1px solid black;
+}
+#myCanvas3 {
+  /* background-color: aqua; */
+  border: 1px solid black;
+}
+#myCanvas4 {
+  /* background-color: aqua; */
+  border: 1px solid black;
+}
+#myCanvas5 {
+  /* background-color: aqua; */
+  border: 1px solid black;
+}
